--- a/grocco_teste.html
+++ b/grocco_teste.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Primeira pagina html</h1>
-    <p>Oi Mundo</p>
+    <h1>Mais um teste</h1>
 </body>
 </html>
